--- a/Modern frameworks GB/Core/Info.plist
+++ b/Modern frameworks GB/Core/Info.plist
@@ -19,5 +19,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
